<resources>
    <string name="app_name">LateTrain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="live_info_display_text">Live: we have been delayed for %1$d minutes</string>
    <string name="your_location">מיקומך</string>
    <string-array name="stations">
        <item>לאן פניך מועדות?</item>
        <item>אופקים</item>
        <item>אחיהוד</item>
        <item>אשדוד עד הלום</item>
        <item>אשקלון</item>
        <item>באר יעקב</item>
        <item>באר שבע - מרכז</item>
        <item>באר שבע - צפון/אוניברסיטה</item>
        <item>בית יהושע</item>
        <item>בית שאן</item>
        <item>בית שמש</item>
        <item>בני ברק</item>
        <item>בנימינה</item>
        <item>בת ים - יוספטל</item>
        <item>בת ים - קוממיות</item>
        <item>דימונה</item>
        <item>הוד השרון - סוקולוב</item>
        <item>הרצליה</item>
        <item>חדרה - מערב</item>
        <item>חולון - וולפסון</item>
        <item>חוצות המפרץ</item>
        <item>חיפה - בת גלים</item>
        <item>חיפה - חוף הכרמל</item>
        <item>חיפה - מרכז השמונה</item>
        <item>יבנה מזרח</item>
        <item>יבנה מערב</item>
        <item>יקנעם - כפר יהושע</item>
        <item>ירושלים - גן החיות התנכי</item>
        <item>ירושלים - יצחק נבון</item>
        <item>ירושלים - מלחה</item>
        <item>כפר חבד</item>
        <item>כפר סבא נורדאו</item>
        <item>כרמיאל</item>
        <item>להבים - רהט</item>
        <item>לוד</item>
        <item>לוד גני אביב</item>
        <item>מגדל העמק - כפר ברוך</item>
        <item>מודיעין - מרכז</item>
        <item>מזכרת בתיה</item>
        <item>מרכזית המפרץ</item>
        <item>נהריה</item>
        <item>נמל תעופה בן גוריון</item>
        <item>נתיבות</item>
        <item>נתניה</item>
        <item>נתניה - ספיר</item>
        <item>עכו</item>
        <item>עפולה ר.איתן</item>
        <item>עתלית</item>
        <item>פאתי מודיעין</item>
        <item>פתח תקווה - קריית אריה</item>
        <item>פתח תקווה - סגולה</item>
        <item>צומת חולון</item>
        <item>קיסריה - פרדס חנה</item>
        <item>קריית גת</item>
        <item>קריית חיים</item>
        <item>קריית מוצקין</item>
        <item>קרית מלאכי - יואב</item>
        <item>ראש העין צפון</item>
        <item>ראשון לציון - הראשונים</item>
        <item>ראשון לציון - משה דיין</item>
        <item>רחובות</item>
        <item>רמלה</item>
        <item>רעננה דרום</item>
        <item>רעננה מערב</item>
        <item>שדרות</item>
        <item>תל אביב - אוניברסיטה</item>
        <item>תל אביב - ההגנה</item>
        <item>תל אביב - השלום</item>
        <item>תל אביב - סבידור מרכז</item>
    </string-array>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait_addmins">חכו!</string>
    <string name="once_in_30_addmins">אפשר לדווח פעם ב30 דקות!</string>
    <string name="got_it_addmins">הבנתי</string>
    <string name="where_are_you_going_addmins">לאן פניך מועדות</string>
    <string name="wich_station_addmins">באיזו תחנה הינך?</string>
    <string name="no_internet_connection_drawer">אין חיבור לאינטרנט</string>
    <string name="share_drawer">שיתוף</string>
    <string name="share_app_url_drawer">https://play.google.com/store/apps/details?id=</string>
    <string name="upload_photo_gallery">תעלו תמונה</string>
    <string name="app_email">latetrainisrael@gmail.com</string>
    <string name="please_fill_all_fields_write_us">נא למלא את כל השדות!</string>
    <string name="send_email_write_us">שלחו אימייל…</string>
    <string name="no_email_app_exist_write_us">אין לך אפליקציה ששולחת אימייל על הפלאפון!</string>
    <string name="live_stream_content">שידור חי</string>
    <string name="app_name_with_space">Late Train</string>
    <string name="make_change_about_us">בואו נעשה שינוי יחד ונגרום לרכבת להפסיק לאחר!</string>
    <string name="developers_about_us">מפתחים:</string>
    <string name="yishai_greenberg">ישי גרינברג</string>
    <string name="shani_shulman">שני שולמן</string>
    <string name="app_version_with_text">גרסא: 1.0.0</string>
    <string name="where_will_you_go_add_mins">לאן תגיע/י</string>
    <string name="time_late_minutes_add_mins">זמן האיחור בדקות</string>
    <string name="report_add_mins">דווח!</string>
    <string name="type_here_chat">הקלד כאן</string>
    <string name="message_write_us">הודעה:</string>
    <string name="send_email_btn_write_us">שלחו אימייל</string>
    <string name="subject_write_us">נושא:</string>
    <string name="stay_in_touch_write_us">צרו קשר!</string>
    <string name="share_text_btn_drawer">שתפו!</string>
    <string name="home_activity_drawer_drawer">מסך בית</string>
    <string name="about_activity_drawer_drawer">אודותינו</string>
    <string name="write_us_activity_drawer_drawer">כתבו לנו</string>
    <string name="please_fill_requiered_information_addmins">נא למלא את המידע הנדרש!</string>
    <string name="report_bottom_nav">דווח</string>
    <string name="complain_bottom_nav">תלונות</string>
    <string name="pictures_bottom_nav">תמונות</string>
    <string name="help_prove_train_late">תעזרו לנו להוכיח שהרכבת מאחרת!</string>
    <string name="take_out_frustration">זה המקום להוציא את התיסכול ביחד!</string>
    <string name="use_location_add_mins">השתמש במיקום!</string>
    <string name="not_in_train_station_addmins">את/ה לא בתחנת רכבת!</string>
    <string name="history_bottom_nav">היסטוריה</string>
    <string name="define_date_fh">בחרו תאריך</string>
    <string name="date_path">%1$d/%2$d/%3$d</string>
    <string name="your_not_at_station">אתה לא בתחנת רכבת!</string>
    <string name="complete_info_for_update">חייבים להיות בתוך תחנת רכבת בשביל לדווח!</string>
    <string name="about_us_name">אודותינו</string>
    <string name="write_us_name">כתבו לנו</string>
    <string name="app_subtitle">עושים שינוי ברכבת</string>
    <string name="image_uploaded_message">התמונה הועלתה וממתינה לאישור</string>
    <string name="waiting_message_addmins">תוכלו לדווח שוב בעוד 30 דקות</string>
    <string name="thanks_he">תודה!</string>
    <string name="remaining_time_add_mins">תוכלו לדווח שוב בעוד %1$d דקות</string>
    <string name="approve_delete_pic">לאשר או למחוק</string>
    <string name="approve_delete_pic_message">האם תרצו לאשר את התמונה או למחוק אותה?</string>
    <string name="approve_pic">מאשר</string>
    <string name="delete_pic">מחק</string>
    <string name="train_waiting_money_content">הערכת שווי הדקות בשקלים</string>
    <string name="train_waiting_time_content">כמות הדקות שהרכבת עיכבה אותנו</string>
    <string name="licenses_about_us_btn">רשיונות</string>
    <string name="minutes_he">דקות</string>
    <string name="nis_he">שקל ₪</string>
    <string name="app_path">com.improve.latetrain</string>
    <string name="to_info">to info</string>
    <string name="send_minutes_waited">send_minutes_waited</string>
    <string name="profile_picture_content_description">Profile picture</string>
    <string name="tamp_day">TEMP_DAY</string>
    <string name="uid">UID</string>
</resources>
