<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_activity_drawer_drawer"/>
        <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about_activity_drawer_drawer"/>
        <item
                android:id="@+id/nav_write_to_us"
                android:icon="@drawable/ic_textsms_black_24dp"
                android:title="@string/write_us_activity_drawer_drawer"/>
    </group>


</menu>
