<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#3880EC"
        tools:context=".fragments.WriteUsFragment">

    <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/stay_in_touch_tv_fwu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/stay_in_touch_write_us"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:fontFamily="@font/comixno2_medium"
    />


    <EditText
            android:id="@+id/your_subject_et_fwu"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:hint="@string/subject_write_us"
            android:textColor="#e6a430"
            android:padding="8dp"
            android:background="@drawable/white_live_container"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stay_in_touch_tv_fwu"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="24sp"
            android:fontFamily="@font/comixno2_medium"
    />
    <EditText
            android:id="@+id/text_body_et_fwu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:hint="@string/message_write_us"
            android:gravity="top"
            android:textColor="#e6a430"
            android:padding="8dp"
            android:background="@drawable/white_live_container"
            app:layout_constraintBottom_toTopOf="@id/send_email_btn_fwu"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_subject_et_fwu"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="24sp"
            android:fontFamily="@font/comixno2_medium"

    />
    <Button
            android:id="@+id/send_email_btn_fwu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:textColor="@android:color/white"
            android:text="@string/send_email_btn_write_us"
            android:textSize="28sp"
            android:fontFamily="@font/comixno2_bold"
            android:background="@drawable/message_bg_orange"
    />


</androidx.constraintlayout.widget.ConstraintLayout>