<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".AboutUsFragment">


    <TextView
            android:id="@+id/headline_tv_fau"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="64sp"
            android:fontFamily="@font/comixno2_medium"
            android:text="@string/app_name"/>
    <TextView
            android:id="@+id/main_text_tv_fau"
            android:fontFamily="@font/comixno2_medium"
            android:layout_marginTop="8dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/headline_tv_fau"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:text="@string/make_change_about_us"/>

    <TextView
            android:id="@+id/programmers_text_tv_fau"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comixno2_medium"
            app:layout_constraintBottom_toTopOf="@id/yishai_profile_fau"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:text="@string/developers_about_us"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/yishai_profile_fau"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/chani_profile_fau"
            app:layout_constraintBottom_toTopOf="@id/yishai_profile_text_fau"
            android:src="@drawable/yishai_profile"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            android:layout_marginBottom="16dp"
    />
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chani_profile_fau"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/yishai_profile_fau"
            app:layout_constraintBottom_toTopOf="@+id/chani_profile_text_fau"
            android:src="@drawable/chani_profile"
            android:layout_marginBottom="16dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/white"
    />
    <TextView
            android:id="@+id/yishai_profile_text_fau"
            app:layout_constraintLeft_toLeftOf="@id/yishai_profile_fau"
            app:layout_constraintRight_toRightOf="@id/yishai_profile_fau"
            app:layout_constraintBottom_toTopOf="@id/version_tv_fau"
            android:text="@string/yishai_greenberg"
            android:fontFamily="@font/comixno2_medium"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/chani_profile_text_fau"
            app:layout_constraintLeft_toLeftOf="@id/chani_profile_fau"
            app:layout_constraintRight_toRightOf="@id/chani_profile_fau"
            app:layout_constraintBottom_toTopOf="@id/version_tv_fau"
            android:text="@string/shani_shulman"
            android:fontFamily="@font/comixno2_medium"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/version_tv_fau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/app_version_with_text"
            android:fontFamily="@font/comixno2_medium"
            android:textSize="20sp"
            android:textColor="#9ABAF7"
            android:layout_margin="16dp"
    />


</androidx.constraintlayout.widget.ConstraintLayout>