<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_scrollFlags="scroll|enterAlways">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/live_container"
            android:visibility="visible">

        <TextView
                android:id="@+id/live_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/white_live_container"
                android:fontFamily="@font/comixno2_bold"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:text="@string/live_stream_content"
                android:textColor="#033675"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/topLayout"
                app:layout_constraintRight_toRightOf="@id/topLayout"
                app:layout_constraintTop_toTopOf="@id/topLayout" />

        <TextView
                android:id="@+id/textlivebar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/comixno2_medium"
                android:text="@string/train_waiting_time_content"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/live_constraint" />

        <TextView
                android:id="@+id/live_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comixno2_medium"
                android:textColor="#f9c871"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textlivebar_tv"
                tools:text="5000" />

        <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/white_live_container"
                android:layout_marginTop="8dp"
                android:paddingTop="4dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp"
                android:id="@+id/live_constraint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/minutes_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comixno2_medium"
                    android:layout_marginRight="8dp"
                    android:text="@string/minutes_he"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/minutes_nis_switch"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <Switch
                    android:id="@+id/minutes_nis_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comixno2_medium"
                    android:text="@string/nis_he"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/minutes_nis_switch"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>